# Bullseye-Blitz

./: .gitignore  CMakeLists.txt  Game_AW.sln  unique.txt
Game_AW/: CMakeLists.txt  Game_AW.vcxproj  MyGame.cpp  MyGame.h  main.cpp
Otter/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Keys.h  Otter.vcxproj  Otter.vcxproj.filters  OtterApp.cpp  OtterApp.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h
Otter/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Otter/include/: Otter.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
